panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_object_like_macro_contains_other_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--trace-preprocessor"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_object_like_macro_contains_other_macro.c
---
success: true
exit_code: 0
----- stdout -----
panko/tests/cases/execute/preprocessor/test_object_like_macro_contains_other_macro.c:5:9: #define MACRO Object {
    name: "MACRO",
    replacement: [
        Int("int")@panko/tests/cases/execute/preprocessor/test_object_like_macro_contains_other_macro.c:5:15,
        Identifier("x")@panko/tests/cases/execute/preprocessor/test_object_like_macro_contains_other_macro.c:5:19,
    ],
}
panko/tests/cases/execute/preprocessor/test_object_like_macro_contains_other_macro.c:11:9: #define x Object {
    name: "x",
    replacement: [
        Identifier("y")@panko/tests/cases/execute/preprocessor/test_object_like_macro_contains_other_macro.c:11:11,
    ],
}

----- stderr -----
