panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_parsing_function_like_macros.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_parsing_function_like_macros.c
---
success: true
exit_code: 0
----- stdout -----












int main() {}

----- stderr -----
