panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_stringise_escaping.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_stringise_escaping.c
---
success: true
exit_code: 0
----- stdout -----
int printf(char const*, ...);



int main() {

    printf("%s\n", "x\"\"\"a\\\"b\\nc\"" );

    printf("%s\n", "'\"'" );

    printf("%s\n", "\"\\\"\"" );
}

----- stderr -----
