panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_stringise_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_stringise_simple.c
---
success: true
exit_code: 0
----- stdout -----


int printf(char const*, ...);



int main() {

    printf("%s\n", "a; 42 + 27; b" );

    printf("%s\n", "some" "thing" );
    return _Lengthof( "a b c" );
}

----- stderr -----
