panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_va_args.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_va_args.c
---
success: true
exit_code: 0
----- stdout -----


int printf(char const*, ...);



int main() {

    printf("%d\n", 1 + 2 );
    return 1 + 2 + 3 + 4, 5, 6 ;
}

----- stderr -----
