panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_varargs_macro_invocation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_varargs_macro_invocation.c
---
success: true
exit_code: 0
----- stdout -----
int printf(char const*, ...);



int main() {

    printf("%d\n", 2 + 3 );

    printf("%d\n", 3 + 7 );

    printf("%d\n", 7 + 8 );
}

----- stderr -----
